<resources>
    <string name="app_name">Muve_Android</string>
    <string name="title_activity_maps">Map</string>

    <string name="muve">Muve</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="have_account">Already Have an Account?</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>
